setting up plain vite project done

--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,8 @@ NODE_ENV = development
 PORT = 5014
 
 MONGO_URI = mongodb://127.0.0.1:27017/lms
+# MONGO_URI = mongodb://127.0.0.1:27017/lms
+# MONGO_URI ="mongodb+srv://amana170829:aman@@@123@cluster0.vurigim.mongodb.net/?retryWrites=true&w=majority"
 
 JWT_SECRET = <YOUR_LONG_JWT_SECRET>
 JWT_EXPIRY = <JWT_EXPIRY>
